<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Birudo</string>
    <string name="app_config_status">Application is not configured yet.</string>
    <string name="action_settings">Settings</string>
    <string name="scan_qr_code_title">Scan QR code</string>
    <string name="scan_qr_code_hint">Scan the QR Code from your jenkins screen to automatically configure the app with your Jenkins server.</string>
    <string name="no_qr_code_found">No QR code found</string>
    <string name="download_prompt">Download QR code scanner</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="new_message_from_jenkins">Jenkins CI</string>
    <string name="build_status"><b>%1$s</b> after %2$s</string>
    <string name="started_by">Started by %1$s</string>
    <string name="display_name">Display Name</string>
    <string name="console_output">Console Output</string>
    <string name="no_build_info">No build information at this time.</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>

    <string name="exception_message_generic">Oops, an application error occurred.</string>
    <string name="exception_message_no_connection">There is no internet connection.</string>
    <string name="exception_message_jenkins_build_info_not_found">Cannot retrieve jenkins build info.</string>
    <string name="exception_message_jenkins_build_info_not_added">Could not add a jenkins build info.</string>
    <string name="items_deleted">%1$d deleted</string>
    <plurals name="selected_items">
        <item quantity="one">%d item selected.</item>
        <item quantity="other">%d items selected.</item>
    </plurals>

    <plurals name="items_deleted">
        <item quantity="one">%d item deleted.</item>
        <item quantity="other">%d items deleted.</item>
    </plurals>


    <!-- GCM -->
    <string name="general_settings">General Settings</string>
    <string name="jenkins_server_configuration">Jenkins Server Configuration</string>
    <string name="settings_jenkins_username">Username</string>
    <string name="jenkins_username_summary">Using \'%1$s\' to login to jenkins.</string>
    <string name="settings_jenkins_token">Jenkins API Token</string>
    <string name="settings_jenkins_token_summary">API Token: %1$s</string>
    <string name="setting_jenkins_base_url">Base URL</string>
    <string name="settings_jenkins_base_url_summary">Connecting to Jenkins @ %1$s.</string>
    <string name="gcm_error">Error obtaining a GCM token: %1$s.</string>
    <string name="new_token">Got new GCM token</string>
    <string name="deregistering_failed">De-registering from Jenkins failed: %1$s.</string>
    <string name="registering_failed">Registering token in Jenkins failed: %1$s.</string>
    <string name="registering_success">Successfully registered token with Jenkins.</string>
    <string name="clear_settings">Clear settings</string>
    <string name="settings_cleared">All settings cleared</string>

    <string name="gcm_configuration">Google Cloud Messaging Configuration</string>
    <string name="gcm_token">GCM Registration ID</string>
    <string name="gcm_token_summary">GCM token: %1$s</string>
    <string name="gcm_sender_id">GCM SenderID</string>
    <string name="gcm_sender_id_summary">Using Project Nr %1$s (find on API Console)</string>

    <!-- Settings -->
    <string name="configuration">Server Configuration</string>
    <string name="notification">Notification</string>
    <string name="vibrate">Vibrate</string>
    <string name="about">About</string>
    <string name="sound">Sound</string>
</resources>
